# awesomeProject/docs/swagger.json
@@ -667,6 +667,10 @@
                 "data_type_name",
                 "data_type_status",
                 "description",
+                "input_first",
+                "input_second",
+                "input_third",
+                "output",
                 "precision",
                 "unit"
             ],
@@ -690,13 +694,13 @@
                 "image_path": {
                     "type": "string"
                 },
-                "inputFirst": {
+                "input_first": {
                     "type": "number"
                 },
-                "inputSecond": {
+                "input_second": {
                     "type": "number"
                 },
-                "inputThird": {
+                "input_third": {
                     "type": "number"
                 },
                 "output": {
