# awesomeProject/internal/app/ds/schema.go
@@ -64,15 +64,15 @@ type ConnectorAppsTypes struct {
 }
 
 type ConnectorAppsTypesDataTypes struct {
-	DataTypeId     string  `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"data_type_id" binding:"-"`
-	ImagePath      *string `gorm:"size:256" json:"image_path" binding:"-"`
-	DataTypeName   string  `gorm:"size:128;not null" form:"data_type_name" json:"data_type_name" binding:"required,max=128"`
-	Precision      float64 `gorm:"not null" form:"precision" json:"precision" binding:"required"`
-	Description    string  `gorm:"size:1024;not null" form:"description" json:"description" binding:"required,max=1024"`
-	Unit           string  `gorm:"size:32;not null" form:"unit" json:"unit" binding:"required,max=32"`
-	DataTypeStatus string  `gorm:"size:50;not null" form:"data_type_status" json:"data_type_status" binding:"required,max=50"` // Replace with Enum
-	InputFirst     *float64
-	InputSecond    *float64
-	InputThird     *float64
-	Output         *float64
+	DataTypeId     string   `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"data_type_id" binding:"-"`
+	ImagePath      *string  `gorm:"size:256" json:"image_path" binding:"-"`
+	DataTypeName   string   `gorm:"size:128;not null" form:"data_type_name" json:"data_type_name" binding:"required,max=128"`
+	Precision      float64  `gorm:"not null" form:"precision" json:"precision" binding:"required"`
+	Description    string   `gorm:"size:1024;not null" form:"description" json:"description" binding:"required,max=1024"`
+	Unit           string   `gorm:"size:32;not null" form:"unit" json:"unit" binding:"required,max=32"`
+	DataTypeStatus string   `gorm:"size:50;not null" form:"data_type_status" json:"data_type_status" binding:"required,max=50"` // Replace with Enum
+	InputFirst     *float64 `form:"input_first" json:"input_first" binding:"required"`
+	InputSecond    *float64 `form:"input_second" json:"input_second" binding:"required"`
+	InputThird     *float64 `form:"input_third" json:"input_third" binding:"required"`
+	Output         *float64 `form:"output" json:"output" binding:"required"`
 } //!!!
